--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
       "no-unused-vars": "off",
       "camelcase": "off",
       "no-console": "off",
+      "@typescript-eslint/ban-types": "off",
       "no-use-before-define": [0],
       "@typescript-eslint/no-use-before-define": [1],
       "@typescript-eslint/no-unused-vars": [
