--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
       "camelcase": "off",
       "no-console": "off",
       "@typescript-eslint/ban-types": "off",
+      "import/no-duplicates": "off",
       "no-use-before-define": [0],
       "@typescript-eslint/no-use-before-define": [1],
       "@typescript-eslint/no-unused-vars": [
